<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, APO!</string>
    <string name="app_name">APO Theta Upsilon</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="default_username">Type your Case ID here.</string>
    <string name="login">Login</string>
    <string name="forgot_password">Click Here to Reset Your Password</string>
    <string name="forgot_password_directions">Type your Case ID in the box then tap the reset button.  In a few minutes an email will be sent to you with your new password.</string>
    <string name="reset">Reset</string>
</resources>
