<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <LinearLayout android:id="@+id/linearLayout1" android:layout_width="wrap_content" android:layout_height="match_parent" android:orientation="vertical">
        <TextView android:layout_height="wrap_content" android:text="@string/forgot_password_directions" android:id="@+id/textView1" android:layout_width="wrap_content"></TextView>
        <EditText android:layout_height="wrap_content" android:id="@+id/username_reset" android:layout_width="match_parent" android:hint="@string/default_username"></EditText>
        <Button android:layout_height="wrap_content" android:id="@+id/reset_btn" android:layout_width="match_parent" android:text="@string/reset"></Button>
    </LinearLayout>
</LinearLayout>
